# multi-agent-github-programmer

./: .gitignore  PROGRESS_TRACKER.md  README.md
agentic_github_employee/: README.md  docker-compose.yml  pyproject.toml
agentic_github_employee/src/application/: orchestrator.py
agentic_github_employee/src/domain/: models.py
agentic_github_employee/src/infrastructure/: interfaces.py  mock_sandbox.py
agentic_github_employee/src/interface/: main.py
