[project]
name = "agentic-github-employee"
version = "0.1.0"
description = "Multi-Agent System for Autonomous Code  Implementation and Quality Assurance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "langgraph>=0.0.30",
    "crewai>=0.30.0",
    "autogen-agentchat>=0.2.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
