[project]
name = "agentic-github-employee"
version = "0.1.0"
description = "Multi-Agent System for Autonomous Code  Implementation and Quality Assurance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.6.0",
    "langgraph",
    "httpx",
    "asyncpg",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
